# aksl

./: .gitignore  INSTALL.pub  LICENCE  README.md  aksl.c  aksldate.c  aksldefs.c  akslip.c  aksltime.c  args.c  array.c  bbcod.c  bmem.c  boolvec.c  calendar.c  capsule.c  charbuf.c  cod.c  configure  configure.in  cpbuf.c  datum.c  dlist.c  error.c  form.c  geom2.c  hashfn.c  heap.c  intlist.c  iso8859.c  list.c  makefile  makefile.in  makefile.pub  nbytes.c  newstat.c  newstr.c  num.c  numb.c  numprint.c  (+12 more)
include/aksl/: aksl.h  aksldate.h  aksldefs.h  akslip.h  aksltime.h  args.h  array.h  bbcod.h  bindef.h  bmem.h  boole.h  boolvec.h  calendar.h  capsule.h  charbuf.h  cod.h  config.h  config.h.in  cpbuf.h  datum.h  dlist.h  error.h  form.h  geom2.h  hashfn.h  heap.h  intlist.h  list.h  nbytes.h  newstat.h  newstr.h  num.h  numb.h  numprint.h  objptr.h  options.h  oral.h  oralaksl.h  phys.h  rndm.h  (+8 more)
